--- a/FE/frontend/package.json
+++ b/FE/frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "axios": "^1.10.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
